[package]
edition = "2018"
name = "peers"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "peers"
doctest = false

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
derive_more = "0"
serde = "1"
tracing-subscriber = "0.3.9"
hdk = "0.0.122"
holo_hash = { version = "=0.0.19", features = ["encoding", "fixturators"] }

